syntax = "proto3";

package auth;

option go_package = "./proto;auth";

import "google/protobuf/empty.proto";

service Auth {
    rpc Login(AuthLoginRequest) returns (AuthLoginResponse) {}
    rpc Upsert(AuthUpsertRequest) returns (google.protobuf.Empty) {}
    rpc Validate(AuthValidateRequest) returns (AuthValidateResponse) {}
}

message AuthLoginRequest {
    string username = 1;
    string password = 2;
}

message AuthLoginResponse {
    string token = 1;
}

message AuthValidateRequest {
    string token = 1;
}

message AuthValidateResponse {
    int64 auth_id = 1;
    int64 account_id = 2;
    string username = 3;
}

message AuthUpsertRequest {
    int64 account_id = 1;
    string username = 2;
    string password = 3;
}
